--- a/aerialstyle.yml
+++ b/aerialstyle.yml
@@ -14,7 +14,7 @@ sources:
         http://ecn.t6.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1,
         http://ecn.t7.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1,
     ]
-    'attribution': 'Map tiles by <a target="_top" rel="noopener" href="http://bing.com">Microsoft</a>, under <a target="_top" rel="noopener" href="https://www.microsoft.com/en-us/maps/product">Microsoft Bing Maps Platform APIs Terms Of Use</a>'
+    attribution: 'Map tiles by <a target="_top" rel="noopener" href="http://bing.com">Microsoft</a>, under <a target="_top" rel="noopener" href="https://www.microsoft.com/en-us/maps/product">Microsoft Bing Maps Platform APIs Terms Of Use</a>'
 
 
 sprite: https://undp-data.github.io/style/sprite/sprite
