--- a/aerialstyle.yml
+++ b/aerialstyle.yml
@@ -5,16 +5,16 @@ sources:
   bing:
     type: raster
     tiles: [
-        "http://ecn.t0.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
-        "http://ecn.t1.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
-        "http://ecn.t2.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
-        "http://ecn.t3.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
-        "http://ecn.t4.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
-        "http://ecn.t5.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
-        "http://ecn.t6.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
-        "http://ecn.t7.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
+        "https://ecn.t0.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
+        "https://ecn.t1.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
+        "https://ecn.t2.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
+        "https://ecn.t3.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
+        "https://ecn.t4.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
+        "https://ecn.t5.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
+        "https://ecn.t6.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
+        "https://ecn.t7.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=1",
     ]
-    attribution: 'Map tiles by <a target="_top" rel="noopener" href="http://bing.com">Microsoft</a>, under <a target="_top" rel="noopener" href="https://www.microsoft.com/en-us/maps/product">Microsoft Bing Maps Platform APIs Terms Of Use</a>'
+    attribution: 'Map tiles by <a target="_top" rel="noopener" href="httpa://bing.com">Microsoft</a>, under <a target="_top" rel="noopener" href="https://www.microsoft.com/en-us/maps/product">Microsoft Bing Maps Platform APIs Terms Of Use</a>'
   carto:
     type: vector
     url: https://tiles.basemaps.cartocdn.com/vector/carto.streets/v1/tiles.json
