--- a/layers/aeroway-runway.yml
+++ b/layers/aeroway-runway.yml
@@ -5,7 +5,7 @@ source-layer: aeroway
 minzoom: 12
 filter:
   - all
-  - - '=='
+  - - "=="
     - class
     - runway
 layout:
@@ -23,4 +23,4 @@ paint:
         - 8
       - - 16
         - 10
-  line-color: '#e8e8e8'
+  line-color: "#e8e8e8"
