--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/UNDP-Data/style#readme",
   "dependencies": {
-    "@mapbox/spritezero": "^8.0.0",
+    "@elastic/spritezero": "6.2.0",
     "@unvt/charites": "^0.1.4",
     "fs": "0.0.1-security",
     "glog": "^1.7.0",
