--- a/aerialstyle.yml
+++ b/aerialstyle.yml
@@ -19,10 +19,20 @@ sources:
   carto:
     type: vector
     url: https://tiles.basemaps.cartocdn.com/vector/carto.streets/v1/tiles.json
+  terrarium:
+    type: raster-dem
+    attribution: '&copy; <a href="https://github.com/tilezen/joerd/blob/master/docs/attribution.md" target="_blank" rel="noopener">Tilezen Joerd</a>'
+    tiles:
+      - https://s3.amazonaws.com/elevation-tiles-prod/terrarium/{z}/{x}/{y}.png
+    minzoom: 0
+    maxzoom: 15
+    tileSize: 256
+    encoding: terrarium
 sprite: https://undp-data.github.io/style/sprite/sprite
 glyphs: https://tiles.basemaps.cartocdn.com/fonts/{fontstack}/{range}.pbf
 layers:
   - !!inc/file layers/bingaerial.yml
+  - !!inc/file layers/hillshade.yml
   - !!inc/file layers/boundary_county.yml
   - !!inc/file layers/boundary_state.yml
   - !!inc/file layers/boundary_country_outline.yml
