--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,9 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: build style
-        run: pnpm build
+        run: |
+          pnpm build
+          mv docs/ dist/
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
