--- a/assets/style.yml
+++ b/assets/style.yml
@@ -19,7 +19,7 @@ sources:
       - -90
       - 180
       - 90
-sprite: https://undp-data.github.io/style/sprite/sprite
+sprite: https://unpkg.com/@undp-data/style@latest/dist/sprite/sprite
 glyphs: https://tiles.basemaps.cartocdn.com/fonts/{fontstack}/{range}.pbf
 layers:
   - !!inc/file layers/background.yml
