fix: package.json

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@changesets/cli": "^2.26.2",
     "@elastic/spritezero": "6.2.1",
     "@unvt/charites": "^0.4.0",
-    "glog": "^1.7.0",
+    "glob": "^10.3.3",
     "rimraf": "^4.1.2"
   }
 }
