--- a/assets/aerialstyle.yml
+++ b/assets/aerialstyle.yml
@@ -33,7 +33,7 @@ sources:
       - -90
       - 180
       - 90
-sprite: https://unpkg.com/@undp-data/style@latest/dist/sprite/sprite
+sprite: https://unpkg.com/@undp-data/style@1.0.0/dist/sprite/sprite
 glyphs: https://tiles.basemaps.cartocdn.com/fonts/{fontstack}/{range}.pbf
 layers:
   - !!inc/file layers/bingaerial.yml
