fix: renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,11 @@
   "extends": [
     "config:base"
   ],
-  "excludePackageNames": [
-    "@elastic/spritezero"
+  "packageRules": [
+    {
+      "excludePackageNames": [
+        "@elastic/spritezero"
+      ]
+    }
   ]
 }
