--- a/assets/layers/place_suburbs.yml
+++ b/assets/layers/place_suburbs.yml
@@ -17,11 +17,7 @@ layout:
       - - 13
         - '{name}'
   text-font:
-    - Montserrat Regular
-    - Open Sans Regular
-    - Noto Sans Regular
-    - HanWangHeiLight Regular
-    - NanumBarunGothic Regular
+    - Proxima Nova Regular
   text-size:
     stops:
       - - 12
