--- a/assets/layers/place_town.yml
+++ b/assets/layers/place_town.yml
@@ -17,11 +17,7 @@ layout:
       - - 13
         - '{name}'
   text-font:
-    - Montserrat Medium
-    - Open Sans Bold
-    - Noto Sans Regular
-    - HanWangHeiLight Regular
-    - NanumBarunGothic Regular
+    - Proxima Nova Bold
   text-size:
     stops:
       - - 8
