--- a/assets/layers/watername_sea.yml
+++ b/assets/layers/watername_sea.yml
@@ -18,11 +18,7 @@ layout:
   symbol-placement: point
   text-size: 12
   text-font:
-    - Montserrat Medium Italic
-    - Open Sans Italic
-    - Noto Sans Regular
-    - HanWangHeiLight Regular
-    - NanumBarunGothic Regular
+    - Proxima Nova Regular Italic
   text-line-height: 1.2
   text-padding: 2
   text-allow-overlap: false
