--- a/assets/aerialstyle.yml
+++ b/assets/aerialstyle.yml
@@ -34,7 +34,7 @@ sources:
       - 180
       - 90
 sprite: https://unpkg.com/@undp-data/style@1.0.2/dist/sprite/sprite
-glyphs: https://tiles.basemaps.cartocdn.com/fonts/{fontstack}/{range}.pbf
+glyphs: https://fonts.undpgeohub.org/fonts/{fontstack}/{range}.pbf
 layers:
   - !!inc/file layers/bingaerial.yml
   - !!inc/file layers/hillshade.yml
