--- a/assets/layers/housenumber.yml
+++ b/assets/layers/housenumber.yml
@@ -13,11 +13,7 @@ layout:
       - - 18
         - 11
   text-font:
-    - Montserrat Regular
-    - Open Sans Regular
-    - Noto Sans Regular
-    - HanWangHeiLight Regular
-    - NanumBarunGothic Regular
+    - Proxima Nova Regular
 paint:
   text-halo-color: rgba(255,255,255,0.15)
   text-color: '#d2b17d'
