--- a/assets/layers/place_city_dot_r4.yml
+++ b/assets/layers/place_city_dot_r4.yml
@@ -15,11 +15,7 @@ filter:
 layout:
   text-field: '{name_en}'
   text-font:
-    - Montserrat Medium
-    - Open Sans Bold
-    - Noto Sans Regular
-    - HanWangHeiLight Regular
-    - NanumBarunGothic Regular
+    - Proxima Nova Bold
   text-size: 12
   icon-image: circle
   icon-offset:
