--- a/assets/layers/poi_park.yml
+++ b/assets/layers/poi_park.yml
@@ -11,11 +11,7 @@ filter:
 layout:
   text-field: '{name}'
   text-font:
-    - Montserrat Medium
-    - Open Sans Bold
-    - Noto Sans Regular
-    - HanWangHeiLight Regular
-    - NanumBarunGothic Regular
+    - Proxima Nova Bold
   text-size:
     stops:
       - - 15
