--- a/assets/layers/watername_lake_line.yml
+++ b/assets/layers/watername_lake_line.yml
@@ -30,11 +30,7 @@ layout:
       - - 17
         - 13
   text-font:
-    - Montserrat Regular Italic
-    - Open Sans Italic
-    - Noto Sans Regular
-    - HanWangHeiLight Regular
-    - NanumBarunGothic Regular
+    - Proxima Nova Regular Italic
   symbol-spacing: 350
   text-pitch-alignment: auto
   text-rotation-alignment: auto
