fix: hide hillshade layer from base style as default

--- a/assets/layers/hillshade.yml
+++ b/assets/layers/hillshade.yml
@@ -1,6 +1,8 @@
 id: hillshade
 type: hillshade
 source: terrarium
+layout:
+  visibility: none
 paint:
   hillshade-shadow-color: hsl(39, 21%, 33%)
   hillshade-illumination-direction: 315
