--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: build style
         run: |
-          pnpm build
+          make build
           mv docs/ dist/
 
       - name: Create Release Pull Request or Publish to npm
