fix: changed background layer id

--- a/assets/blank.yml
+++ b/assets/blank.yml
@@ -19,4 +19,4 @@ sources:
 sprite: ./sprite/sprite
 glyphs: https://fonts.undpgeohub.org/fonts/{fontstack}/{range}.pbf
 layers:
-  - !!inc/file layers/background.yml
+  - !!inc/file blank/background.yml
