--- a/assets/layers/watername_sea.yml
+++ b/assets/layers/watername_sea.yml
@@ -18,7 +18,7 @@ layout:
   symbol-placement: point
   text-size: 12
   text-font:
-    - Proxima Nova Regular Italic
+    - Proxima Nova Italic
   text-line-height: 1.2
   text-padding: 2
   text-allow-overlap: false
