--- a/assets/layers/watername_lake.yml
+++ b/assets/layers/watername_lake.yml
@@ -34,7 +34,7 @@ layout:
       - - 17
         - 13
   text-font:
-    - Proxima Nova Regular Italic
+    - Proxima Nova Italic
   text-line-height: 1.2
   text-padding: 2
   text-allow-overlap: false
