fix: add hidden hillshade layer to blank style.

--- a/assets/blank.yml
+++ b/assets/blank.yml
@@ -20,3 +20,4 @@ sprite: ./sprite/sprite
 glyphs: https://fonts.undpgeohub.org/fonts/{fontstack}/{range}.pbf
 layers:
   - !!inc/file blank/background.yml
+  - !!inc/file layers/hillshade.yml
