--- a/assets/layers/background.yml
+++ b/assets/layers/background.yml
@@ -1,9 +1,7 @@
 id: background
 type: background
+layout:
+  visibility: visible
 paint:
-  background-color:
-    stops:
-      - - 7
-        - '#FFFCF7'
-      - - 10
-        - '#FAF9F6'
+  background-color: '#fbf8f3'
+  background-opacity: 1
