--- a/assets/style.yml
+++ b/assets/style.yml
@@ -1,7 +1,22 @@
 version: 8
 name: Voyager
 metadata: {}
+
+sprite:
+  - id: undp
+    url: ./sprite/sprite
+  - id: default
+    url: https://pro-ags2.dfs.un.org/arcgis/rest/services/Hosted/Unite_StreetMapVT_CVW_V01/VectorTileServer/resources/sprites/sprite_S
+
+glyphs: https://fonts.undpgeohub.org/fonts/{fontstack}/{range}.pbf
 sources:
+  esri:
+    attribution: '&copy; <a href="https://www.esri.com/en-us/home" target="_blank" rel="noopener">Esri</a> | United Nations'
+    type: vector
+    tiles:
+      - https://pro-ags2.dfs.un.org/arcgis/rest/services/Hosted/Unite_StreetMapVT_CVW_V01/VectorTileServer/tile/{z}/{y}/{x}.pbf
+    minzoom: 0
+    maxzoom: 23
   carto:
     type: vector
     url: https://tiles.basemaps.cartocdn.com/vector/carto.streets/v1/tiles.json
@@ -19,8 +34,8 @@ sources:
       - -90
       - 180
       - 90
-sprite: ./sprite/sprite
-glyphs: https://fonts.undpgeohub.org/fonts/{fontstack}/{range}.pbf
+
+
 layers:
   - !!inc/file layers/background.yml
   - !!inc/file layers/hillshade.yml
@@ -30,8 +45,6 @@ layers:
   - !!inc/file layers/landuse_residential.yml
   - !!inc/file layers/landuse.yml
   - !!inc/file layers/waterway.yml
-  - !!inc/file layers/boundary_county.yml
-  - !!inc/file layers/boundary_state.yml
   - !!inc/file layers/water.yml
   - !!inc/file layers/water_shadow.yml
   - !!inc/file layers/aeroway-runway.yml
@@ -87,8 +100,6 @@ layers:
   - !!inc/file layers/bridge_mot_fill.yml
   - !!inc/file layers/building.yml
   - !!inc/file layers/building-top.yml
-  - !!inc/file layers/boundary_country_outline.yml
-  - !!inc/file layers/boundary_country_inner.yml
   - !!inc/file layers/waterway_label.yml
   - !!inc/file layers/watername_ocean.yml
   - !!inc/file layers/watername_sea.yml
@@ -116,5 +127,46 @@ layers:
   - !!inc/file layers/roadname_pri.yml
   - !!inc/file layers/roadname_major.yml
   - !!inc/file layers/housenumber.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Sovereign/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/International/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Armistice/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Special/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Other/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Autonomous/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_MMR/International/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_VMC/International/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_M/Other/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_M/Armistice/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_M/Special/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_M/International/halo.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_MMR/Admin 4/0.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_MMR/Admin 3/0.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_VMC/Admin3.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_MMR/Admin 2.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_VMC/Admin2.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_MIK/Admin2.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_NoHQ/Admin2.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Admin2.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_MMR/Admin 1.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_VMC/Admin1.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_NoHQ/Admin1.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Admin1.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Sovereign/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Autonomous/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Other/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Armistice/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Special/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_MMR/International boundary/0.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_VMC/International/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/International/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_M/Other/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_M/Armistice/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_M/Special/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_M/International/line.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_S/Other.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_S/Armistice.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_S/Special.yml
+  - !!inc/file un_street_map/Admin/ADM_Boundaries_S/International.yml
+
 id: voyager
 owner: Carto
