--- a/assets/un_street_map/Labels/LAB_Country_L05_P/label/MiddleEast.yml
+++ b/assets/un_street_map/Labels/LAB_Country_L05_P/label/MiddleEast.yml
@@ -10,7 +10,7 @@ minzoom: 4
 maxzoom: 5
 layout:
   text-font:
-    - Open Sans Semibold
+    - Open Sans Semi Bold
   text-max-width: 4
   text-size: 8
   text-anchor: center
