--- a/assets/un_street_map.yml
+++ b/assets/un_street_map.yml
@@ -10,7 +10,7 @@ glyphs: https://fonts.undpgeohub.org/fonts/{fontstack}/{range}.pbf
 sources:
   esri:
     type: vector
-    attribution: '&copy; UN Street Map (UN)'
+    attribution: '&copy; <a href="https://www.un.org/geospatial/mapsgeo" target="_blank" rel="noopener">United Nations</a>'
     tiles:
       - https://pro-ags2.dfs.un.org/arcgis/rest/services/Hosted/Unite_StreetMapVT_CVW_V01/VectorTileServer/tile/{z}/{y}/{x}.pbf
     minzoom: 0
