fix: switched the default sprite source

--- a/assets/dark.yml
+++ b/assets/dark.yml
@@ -26,9 +26,9 @@ sources:
       - 180
       - 90
 sprite:
-  - id: undp
-    url: ./sprite/sprite
   - id: default
+    url: ./sprite/sprite
+  - id: esri
     url: https://pro-ags2.dfs.un.org/arcgis/rest/services/Hosted/Unite_StreetMapVT_CVW_V01/VectorTileServer/resources/sprites/sprite
 glyphs: https://fonts.undpgeohub.org/fonts/{fontstack}/{range}.pbf
 layers:
