--- a/assets/un_street_map.yml
+++ b/assets/un_street_map.yml
@@ -2,9 +2,9 @@ version: 8
 name: UN Street Map
 metadata: {}
 sprite:
-  - id: undp
-    url: ./sprite/sprite
   - id: default
+    url: ./sprite/sprite
+  - id: esri
     url: https://pro-ags2.dfs.un.org/arcgis/rest/services/Hosted/Unite_StreetMapVT_CVW_V01/VectorTileServer/resources/sprites/sprite
 glyphs: https://fonts.undpgeohub.org/fonts/{fontstack}/{range}.pbf
 sources:
