--- a/assets/un_street_map/POI/POI_MINUSCA/Church.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/Church.yml
@@ -8,7 +8,7 @@ filter:
   - 20
 minzoom: 13
 layout:
-  icon-image: POI_Church
+  icon-image: esri:POI_Church
   icon-size:
     stops:
       - - 14
