--- a/assets/un_street_map/Transport/TRA_Railways/Subway/line.yml
+++ b/assets/un_street_map/Transport/TRA_Railways/Subway/line.yml
@@ -9,7 +9,7 @@ filter:
 minzoom: 13
 layout:
   symbol-placement: line
-  icon-image: TRA_Subway
+  icon-image: esri:TRA_Subway
   icon-size:
     stops:
       - - 16
