--- a/assets/un_street_map/POI/POI_IATA_P/Airport.yml
+++ b/assets/un_street_map/POI/POI_IATA_P/Airport.yml
@@ -58,7 +58,7 @@ layout:
   text-rotate: 0
   text-max-angle: 45
   text-field: '{_name}'
-  icon-image: POI_Airport_S
+  icon-image: esri:POI_Airport_S
   text-transform: none
 paint:
   icon-opacity: 1
