--- a/assets/un_street_map/POI/POI_MINUSCA/Bank.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/Bank.yml
@@ -8,7 +8,7 @@ filter:
   - 15
 minzoom: 15.85
 layout:
-  icon-image: POI_Bank
+  icon-image: esri:POI_Bank
   icon-size:
     stops:
       - - 16
