--- a/assets/un_street_map/POI/POI_MINUSCA/College.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/College.yml
@@ -8,7 +8,7 @@ filter:
   - 11
 minzoom: 13
 layout:
-  icon-image: POI_College
+  icon-image: esri:POI_College
   icon-size:
     stops:
       - - 14
