--- a/assets/un_street_map/POI/POI_MINUSCA/Communication.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/Communication.yml
@@ -8,7 +8,7 @@ filter:
   - 17
 minzoom: 15.85
 layout:
-  icon-image: POI_Communication
+  icon-image: esri:POI_Communication
   icon-size:
     stops:
       - - 16
