--- a/assets/un_street_map/POI/POI_MINUSCA/Embassy.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/Embassy.yml
@@ -8,7 +8,7 @@ filter:
   - 2
 minzoom: 11
 layout:
-  icon-image: POI_Embassy
+  icon-image: esri:POI_Embassy
   icon-size:
     stops:
       - - 13
