--- a/assets/un_street_map/POI/POI_MINUSCA/Military.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/Military.yml
@@ -8,7 +8,7 @@ filter:
   - 3
 minzoom: 11
 layout:
-  icon-image: POI_Military
+  icon-image: esri:POI_Military
   icon-size:
     stops:
       - - 13
