--- a/assets/un_street_map/POI/POI_MINUSCA/Restaurant.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/Restaurant.yml
@@ -8,7 +8,7 @@ filter:
   - 9
 minzoom: 13.85
 layout:
-  icon-image: POI_Restaurant
+  icon-image: esri:POI_Restaurant
   icon-size:
     stops:
       - - 16
