--- a/assets/un_street_map/POI/POI_MINUSCA/School.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/School.yml
@@ -8,7 +8,7 @@ filter:
   - 12
 minzoom: 13
 layout:
-  icon-image: POI_School
+  icon-image: esri:POI_School
   icon-size:
     stops:
       - - 14
