--- a/assets/un_street_map/POI/POI_MINUSCA/Sport.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/Sport.yml
@@ -8,7 +8,7 @@ filter:
   - 18
 minzoom: 15.85
 layout:
-  icon-image: POI_Sport
+  icon-image: esri:POI_Sport
   icon-size:
     stops:
       - - 16
