--- a/assets/un_street_map/POI/POI_MINUSCA/landmark.yml
+++ b/assets/un_street_map/POI/POI_MINUSCA/landmark.yml
@@ -8,7 +8,7 @@ filter:
   - 13
 minzoom: 15
 layout:
-  icon-image: POI_Monument
+  icon-image: esri:POI_Monument
   icon-size:
     stops:
       - - 15
