--- a/assets/un_street_map/POI/POI_Mission/Bank.yml
+++ b/assets/un_street_map/POI/POI_Mission/Bank.yml
@@ -8,7 +8,7 @@ filter:
   - 38
 minzoom: 14.85
 layout:
-  icon-image: POI_Bank
+  icon-image: esri:POI_Bank
   icon-size:
     stops:
       - - 15
