--- a/assets/un_street_map/POI/POI_Mission/Fuel.yml
+++ b/assets/un_street_map/POI/POI_Mission/Fuel.yml
@@ -8,7 +8,7 @@ filter:
   - 42
 minzoom: 14.85
 layout:
-  icon-image: POI_Fuel
+  icon-image: esri:POI_Fuel
   icon-size: 1
 paint:
   icon-color: '#CC3D61'
