--- a/assets/un_street_map/POI/POI_Mission/Park.yml
+++ b/assets/un_street_map/POI/POI_Mission/Park.yml
@@ -8,7 +8,7 @@ filter:
   - 41
 minzoom: 14.85
 layout:
-  icon-image: POI_Park
+  icon-image: esri:POI_Park
   icon-size:
     stops:
       - - 15
