--- a/assets/un_street_map/POI/POI_Mission/Shop.yml
+++ b/assets/un_street_map/POI/POI_Mission/Shop.yml
@@ -8,7 +8,7 @@ filter:
   - 39
 minzoom: 14.85
 layout:
-  icon-image: POI_Shop
+  icon-image: esri:POI_Shop
   icon-size:
     stops:
       - - 15
