--- a/assets/un_street_map/POI/POI_Mission/Sport.yml
+++ b/assets/un_street_map/POI/POI_Mission/Sport.yml
@@ -8,7 +8,7 @@ filter:
   - 40
 minzoom: 14.85
 layout:
-  icon-image: POI_Sport
+  icon-image: esri:POI_Sport
   icon-size:
     stops:
       - - 15
