--- a/assets/un_street_map/Places/PPL_Mission/label/City_MIK.yml
+++ b/assets/un_street_map/Places/PPL_Mission/label/City_MIK.yml
@@ -17,7 +17,7 @@ layout:
     - 0
     - -0.3
   text-field: '{_name7}'
-  icon-image: PPL_City
+  icon-image: esri:PPL_City
 paint:
   text-color: '#343434'
   text-halo-color: rgba(255,255,255,0.75)
