--- a/assets/style.yml
+++ b/assets/style.yml
@@ -55,8 +55,6 @@ layers:
   - !!inc/file layers/landuse_residential.yml
   - !!inc/file layers/landuse.yml
   - !!inc/file layers/waterway.yml
-  # - !!inc/file layers/boundary_county.yml
-  # - !!inc/file layers/boundary_state.yml
   - !!inc/file layers/water.yml
   - !!inc/file layers/water_shadow.yml
   - !!inc/file layers/aeroway-runway.yml
@@ -112,11 +110,6 @@ layers:
   - !!inc/file layers/bridge_mot_fill.yml
   - !!inc/file layers/building.yml
   - !!inc/file layers/building-top.yml
-
-  # UN addmin boundaries
-  # ADM_Boundaries_L_HQ: z 5-
-  # ADM_Boundaries_M: z 4
-  # ADM_Boundaries_S: z 0-3
   - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Sovereign/halo.yml
   - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/International/halo.yml
   - !!inc/file un_street_map/Admin/ADM_Boundaries_L_HQ/Armistice/halo.yml
@@ -157,11 +150,6 @@ layers:
   - !!inc/file un_street_map/Admin/ADM_Boundaries_S/Armistice.yml
   - !!inc/file un_street_map/Admin/ADM_Boundaries_S/Special.yml
   - !!inc/file un_street_map/Admin/ADM_Boundaries_S/International.yml
-
-  # carto style layers
-  # - !!inc/file layers/boundary_country_outline.yml
-  # - !!inc/file layers/boundary_country_inner.yml
-
   - !!inc/file layers/waterway_label.yml
   - !!inc/file layers/watername_ocean.yml
   - !!inc/file layers/watername_sea.yml
@@ -171,8 +159,6 @@ layers:
   - !!inc/file layers/place_suburbs.yml
   - !!inc/file layers/place_villages.yml
   - !!inc/file layers/place_town.yml
-  - !!inc/file layers/place_country_2.yml
-  - !!inc/file layers/place_country_1.yml
   - !!inc/file layers/place_state.yml
   - !!inc/file layers/place_continent.yml
   - !!inc/file layers/place_city_r6.yml
@@ -189,5 +175,44 @@ layers:
   - !!inc/file layers/roadname_pri.yml
   - !!inc/file layers/roadname_major.yml
   - !!inc/file layers/housenumber.yml
+  - !!inc/file un_street_map/Labels/LAB_Water_S/label/Ocean.yml
+  - !!inc/file un_street_map/Labels/LAB_Water_M/label/Ocean.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin4_MMR/label/Class 1.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin3_MMR/label/Class 1.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin3_VMC/label/Municipality.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin3_MIK/label/Municipality.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin2_NoHQ/label/Admin2.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin2_HQ/label/Admin2.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin1_NoHQ/label/Admin1.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin1_HQ/label/Admin1.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/Territory_NSG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/Territory_SG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/State_S.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/State_M.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/State_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/Territory_NSG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/Territory_SG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/State_S.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/State_M.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/State_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/Territory_NSG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/Territory_SG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/China.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/MiddleEast.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/State_S.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/State_M.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/State_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/Autonomies.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/Territory_SG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/China.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/MiddleEast.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/Territory_NSG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/State_S.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/State_M.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/State_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Autonomous_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L/label/Territory.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L/label/MiddleEast.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L/label/State.yml
 id: voyager
 owner: Carto
